--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "trustnote-wallet-beta2",
+    "name": "rng-wallet",
     "description": "Make payment fun",
-    "author": "TrustNote",
+    "author": "Ring Network",
     "version": "1.0.0",
     "keywords": [
         "wallet",
-        "trustnote",
+        "ring network",
         "decentralized",
         "multisignature",
         "bitcoin"
@@ -21,7 +21,7 @@
         "ios": "run-s compile && gulp ios"
     },
     "window": {
-        "title": "TrustNote",
+        "title": "RingNetwork",
         "icon": "./public/img/icons/icon-white-256.png",
         "show": true,
         "visible": true,
@@ -38,14 +38,14 @@
         "plugin": false
     },
     "chromium-args": "--proxy-server=http://127.1.2.7 --disable-password-generation",
-    "homepage": "https://github.com/trustnote/trustnote-pow-wallet",
+    "homepage": "https://github.com/ringnetwork/rng-wallet",
     "license": "MIT",
     "repository": {
-        "url": "https://github.com/trustnote/trustnote-pow-wallet.git",
+        "url": "https://github.com/ringnetwork/rng-wallet.git",
         "type": "git"
     },
     "bugs": {
-        "url": "https://github.com/trustnote/trustnote-pow-wallet/issues"
+        "url": "https://github.com/ringnetwork/rng-wallet/issues"
     },
     "browser": {
         "request": "browser-request",
@@ -60,8 +60,8 @@
         "moment": "^2.18.1",
         "preconditions": "^1.0.8",
         "sjcl": "^1.0.2",
-        "trustnote-pow-common": "git+https://github.com/trustnote/trustnote-pow-common.git",
-        "trustnote-pow-miner": "git+https://github.com/trustnote/trustnote-pow-miner.git"
+        "rng-core": "git+https://github.com/ringnetwork/rng-core.git#master",
+        "rng-miner": "git+https://github.com/ringnetwork/rng-miner.git#master"
     },
     "devDependencies": {
         "angular": "^1.3.14",
@@ -100,20 +100,20 @@
             "devDependencies",
             "build"
         ],
-        "output": "../trustnotebuilds/",
-        "outputPattern": "TrustNote",
+        "output": "../rngbuilds/",
+        "outputPattern": "RingNetwork",
         "win": {
-            "productName": "TrustNote",
-            "companyName": "trustnote.org",
+            "productName": "RingNetwork",
+            "companyName": "ringnetwork.org",
             "copyright": "copyright",
             "icon": "./public/img/icons/icon-white.ico"
         },
         "mac": {
-            "displayName": "TrustNote",
+            "displayName": "RingNetwork",
             "copyright": "copyright",
             "icon": "./public/img/icons/icon-white-outline.icns",
             "plistStrings": {
-                "CFBundleIdentifier": "org.trustnote.smartwallet",
+                "CFBundleIdentifier": "org.ringnetwork.smartwallet",
                 "CFBundleDocumentTypes": []
             }
         },
