--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-    "name": "trustnote",
+    "name": "RingNetwork",
     "keywords": [
-        "trustnote",
+        "ring network",
         "wallet",
         "multisignature"
     ],
     "dependencies": {
         "angular": "1.4.6",
-        "angular-foundation": "trustnote/angular-foundation",
+        "angular-foundation": "ringnetwork/angular-foundation",
         "angular-gettext": "2.1.0",
         "angular-touch": "1.4.6",
         "angular-carousel": "*",
